[package]
name = "ex-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
bytes = "1.2.1"
futures-util = "*"
anyhow = "1.0.66"

# Http
hyper= { version = "1.0.0-rc.1", features = ["full"] }
http-body-util = "0.1.0-rc.1"

