[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-test = { version = "0.4" }
futures-util = { version = "0.3" }

pin-project = { version = "1.0" }

http = { version = "0.2.8" }
bytes = { version ="1.2.1" }

hyper =  { version = "1.0.0-rc.1", features = ["full"]}
# http-body-util ={ version = "1.0.0-rc1" }
# http-body = "1.0.0-rc1"
http-body-util = "0.1.0-rc.1"


tracing = "0.1"
tracing-subscriber = "0.3"